# cmakea

./: README.md
ch12/12.1/: CMakeLists.txt  tutorial.cpp
cmake/: gcmake  ncmake
cmake/bld_env/: CMakeLists.txt
cmake/ch12/12.1/: .tutorial.cpp.swp
cmake/commands/: README.md
cmake/commands/message/: CMakeLists.txt  main.c
doc/: build.ninja  building_seastar.md  gnuc_version.cc  install-dependencies.sh
make/: README.md
make/ch02/2.2/: Makefile  main.c
make/ch02/2.4/: Makefile  main.c
make/ch02/2.5/: Makefile  main.c
make/ch02/2.6/: Makefile  main.c
make/ch10/10.2/: Makefile  client.cc  main.c
